src/compiling_error.txt
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp: In function 'int main()':
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:108:23: error: no matching function for call to 'CharacterCreation::CharacterCreation()'
     CharacterCreation creator;
                       ^~~~~~~
In file included from C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:4:0:
../include/CharacterCreation.h:10:5: note: candidate: CharacterCreation::CharacterCreation(Character&, int)
     CharacterCreation(Character &p_character, int p_points);
     ^~~~~~~~~~~~~~~~~
../include/CharacterCreation.h:10:5: note:   candidate expects 2 arguments, 0 provided
../include/CharacterCreation.h:7:7: note: candidate: constexpr CharacterCreation::CharacterCreation(const CharacterCreation&)
 class CharacterCreation : public LevelUp
       ^~~~~~~~~~~~~~~~~
../include/CharacterCreation.h:7:7: note:   candidate expects 1 argument, 0 provided
../include/CharacterCreation.h:7:7: note: candidate: constexpr CharacterCreation::CharacterCreation(CharacterCreation&&)
../include/CharacterCreation.h:7:7: note:   candidate expects 1 argument, 0 provided
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:109:13: error: no matching function for call to 'LevelUp::LevelUp()'
     LevelUp leveler;
             ^~~~~~~
In file included from C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:3:0:
../include/LevelUp.h:16:5: note: candidate: LevelUp::LevelUp(Character&, int)
     LevelUp(Character &p_character, int p_points);
     ^~~~~~~
../include/LevelUp.h:16:5: note:   candidate expects 2 arguments, 0 provided
../include/LevelUp.h:9:7: note: candidate: constexpr LevelUp::LevelUp(const LevelUp&)
 class LevelUp
       ^~~~~~~
../include/LevelUp.h:9:7: note:   candidate expects 1 argument, 0 provided
../include/LevelUp.h:9:7: note: candidate: constexpr LevelUp::LevelUp(LevelUp&&)
../include/LevelUp.h:9:7: note:   candidate expects 1 argument, 0 provided
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:110:15: error: no matching function for call to 'Character::Character()'
     Character player;
               ^~~~~~
In file included from C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:1:0:
../include/Character.h:33:5: note: candidate: Character::Character(std::__cxx11::string)
     Character(std::string p_name);
     ^~~~~~~~~
../include/Character.h:33:5: note:   candidate expects 1 argument, 0 provided
../include/Character.h:11:7: note: candidate: Character::Character(const Character&)
 class Character
       ^~~~~~~~~
../include/Character.h:11:7: note:   candidate expects 1 argument, 0 provided
../include/Character.h:11:7: note: candidate: Character::Character(Character&&)
../include/Character.h:11:7: note:   candidate expects 1 argument, 0 provided
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:111:15: error: no matching function for call to 'Character::Character()'
     Character opponent;
               ^~~~~~~~
In file included from C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:1:0:
../include/Character.h:33:5: note: candidate: Character::Character(std::__cxx11::string)
     Character(std::string p_name);
     ^~~~~~~~~
../include/Character.h:33:5: note:   candidate expects 1 argument, 0 provided
../include/Character.h:11:7: note: candidate: Character::Character(const Character&)
 class Character
       ^~~~~~~~~
../include/Character.h:11:7: note:   candidate expects 1 argument, 0 provided
../include/Character.h:11:7: note: candidate: Character::Character(Character&&)
../include/Character.h:11:7: note:   candidate expects 1 argument, 0 provided
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:138:36: error: expected ';' before '{' token
                             player { "DEFAULT NAME" };
                                    ^
C:\Users\field\Documents\ImportantStuff\Programming\C++Projects\Arena Battler\src\main.cpp:139:37: error: expected ';' before '{' token
                             creator { player, 5 };
                                     ^
